--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
     needs: build_and_test
     runs-on: ubuntu-20.04
     # if: github.event_name == 'push'
-    if: github.event_name == 'push' && ${{ !contains(github.event.head_commit.message, '#skip') }}
+    if: github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
@@ -46,7 +46,7 @@ jobs:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
   tag_release:
-      if: github.event_name == 'push' && ${{ !contains(github.event.head_commit.message, '#skip') }}
+      if: github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')
       needs: deploy
       runs-on: ubuntu-22.04
       permissions:
