--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,4 +29,16 @@ jobs:
     steps:
       - name: tell me i skipped
         run: echo "skipped"
+      - name: Test Custom
+        uses: rjstone/discord-webhook-notify@v1
+        with:
+            severity: info
+            username: janneks
+            color: '#ff00aa'
+            avatarUrl: https://github.githubassets.com/images/modules/logos_page/Octocat.png
+            description: This is a custom description.
+            details: 'Custom details: Somebody set up us the bomb.'
+            footer: This is a footer.
+            text: This is where text goes.
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
         
