--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -1,13 +1,11 @@
 name: Health check
 
 on:
-  push:
-    branches:
-      # - master
-      - health
+  schedule:
+    - cron: '5 0-23 * * *'
 
 jobs:
-  hello_world_job:
+  ping_mainsite:
     runs-on: ubuntu-20.04
 
     steps:
